Update docs, update exceptions, added websockets to project, create new handler for websockets
