# docs/swagger.json
@@ -118,6 +118,12 @@
                             "$ref": "#/definitions/response.Error"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
@@ -291,6 +297,12 @@
                             "$ref": "#/definitions/response.GroupList"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -331,7 +343,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreateGroup"
+                            "$ref": "#/definitions/request.Group"
                         }
                     }
                 ],
@@ -344,6 +356,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -411,6 +429,12 @@
                             "$ref": "#/definitions/response.Group"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -464,6 +488,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -532,6 +562,12 @@
                             "$ref": "#/definitions/response.Group"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -592,6 +628,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.Group"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "403": {
@@ -656,6 +698,12 @@
                             "$ref": "#/definitions/response.Group"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -713,6 +761,12 @@
                             "$ref": "#/definitions/response.Group"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -759,7 +813,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreateGroup"
+                            "$ref": "#/definitions/request.Group"
                         }
                     },
                     {
@@ -779,6 +833,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -840,6 +900,12 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
                     },
                     "403": {
                         "description": "Forbidden",
@@ -913,6 +979,12 @@
                             "$ref": "#/definitions/response.Error"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -980,6 +1052,12 @@
                     "204": {
                         "description": "No Content"
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -1000,10 +1078,54 @@
                     }
                 }
             }
+        },
+        "/ws": {
+            "get": {
+                "description": "Websockets connection to receive messages in real-time",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Websockets"
+                ],
+                "summary": "Websockets for real-time communication",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebsocketMessage"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "request.CreateGroup": {
+        "request.Group": {
             "type": "object",
             "required": [
                 "name"
@@ -1173,6 +1295,32 @@
                 }
             }
         },
+        "response.GroupMessage": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "group": {
+                    "$ref": "#/definitions/response.SimpleGroup"
+                },
+                "is_edited": {
+                    "type": "boolean"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/response.User"
+                },
+                "uuid": {
+                    "type": "string"
+                }
+            }
+        },
         "response.GroupUserAdded": {
             "type": "object",
             "properties": {
@@ -1190,31 +1338,20 @@
         "response.Message": {
             "type": "object",
             "properties": {
-                "content": {
-                    "type": "string"
-                },
                 "created_at": {
                     "type": "string"
                 },
                 "is_edited": {
                     "type": "boolean"
                 },
+                "message": {
+                    "type": "string"
+                },
                 "updated_at": {
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/response.MessageUser"
-                },
-                "uuid": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.MessageUser": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
+                    "$ref": "#/definitions/response.User"
                 },
                 "uuid": {
                     "type": "string"
@@ -1228,6 +1365,17 @@
                     "type": "string"
                 },
                 "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.SimpleGroup": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "uuid": {
                     "type": "string"
                 }
             }
@@ -1251,6 +1399,17 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "response.WebsocketMessage": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "data": {
+                    "$ref": "#/definitions/response.GroupMessage"
                 }
             }
         }
