# internal/model/response/group.go
@@ -7,11 +7,6 @@ type Group struct {
 	Users []User `json:"users"`
 }
 
-type User struct {
-	Uuid string `json:"uuid"`
-	Name string `json:"name"`
-}
-
 type GroupList struct {
 	PageNumber int32   `json:"pageNumber"`
 	PageSize   int32   `json:"pageSize"`
@@ -23,4 +18,9 @@ type GroupUserAdded struct {
 	Uuid    string `json:"uuid"`
 	User    User   `json:"user"`
 	Message string `json:"message"`
+}
+
+type SimpleGroup struct {
+	Uuid string `json:"uuid"`
+	Name string `json:"name"`
 }
