# internal/model/response/message.go
@@ -2,18 +2,13 @@ package response
 
 import "time"
 
-type MessageUser struct {
-	Uuid string `json:"uuid"`
-	Name string `json:"name"`
-}
-
 type Message struct {
-	Uuid      string      `json:"uuid"`
-	CreatedAt time.Time   `json:"created_at"`
-	UpdatedAt time.Time   `json:"updated_at"`
-	Content   string      `json:"content"`
-	IsEdited  bool        `json:"is_edited"`
-	User      MessageUser `json:"user"`
+	Uuid      string    `json:"uuid"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	Content   string    `json:"message"`
+	IsEdited  bool      `json:"is_edited"`
+	User      User      `json:"user"`
 }
 
 type MessageList struct {
@@ -21,4 +16,9 @@ type MessageList struct {
 	PageSize   int32     `json:"pageSize"`
 	ItemsCount int32     `json:"itemsCount"`
 	Items      []Message `json:"items"`
+}
+
+type GroupMessage struct {
+	Message
+	Group SimpleGroup `json:"group"`
 }
