# internal/model/response/websocket.go
@@ -1,0 +1,6 @@
+package response
+
+type WebsocketMessage struct {
+	Action string       `json:"action"`
+	Data   GroupMessage `json:"data"`
+}
